Mortgage Information Bangla And English

--- a/mortgageInfo.html
+++ b/mortgageInfo.html
@@ -85,10 +85,18 @@
         <a class="switch-btn" href="mortgageInfoBangla.html">বাংলা</a>
         <h1 class="mortgages-title">Mortgage Information</h1>
         <hr>
-        <h5 class="mortgage-header">Header</h5>
-        <p class="mortgage-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus accusantium obcaecati ad iusto sequi eum earum minima illum sunt cupiditate.</p>
-        <p class="mortgage-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus cum, eos debitis magnam ducimus eaque optio error blanditiis vel necessitatibus molestias fugiat aut excepturi iste tempora illum nemo quae nostrum voluptatem facere asperiores eius qui est corrupti! Voluptas alias iste soluta aliquid, magni possimus voluptatum dolorem ea accusantium corporis voluptatem?</p>
-        <p class="mortgage-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque mollitia odit blanditiis magni officiis autem corporis velit omnis dolore pariatur, nisi eius doloremque perspiciatis quidem veniam, placeat praesentium dolores. Ipsam.</p>
+        <h5 class="mortgage-header">Mortgage is:</h5>
+        <p class="mortgage-text">A mortgage is a loan that is used to purchase a property, typically a home. The loan is typically provided by a lender, such as a bank or a mortgage company, and the borrower is required to repay the loan over a set period of time, usually several years or decades.</p>
+        <p class="mortgage-text">When someone takes out a mortgage, they are borrowing a large amount of money to pay for the property they want to buy. The lender will typically require the borrower to make a down payment on the property, which is a portion of the purchase price that the borrower pays upfront. The rest of the purchase price is covered by the mortgage loan.</p>
+        <p class="mortgage-text">In exchange for the loan, the lender will charge interest on the amount borrowed, which is typically paid back in regular installments over the life of the mortgage. The terms of the mortgage, including the interest rate, the length of the loan, and the amount of the monthly payment, will be specified in a mortgage agreement between the borrower and the lender.</p>
+
+        <h5 class="mortgage-header">Mortgage needs for:</h5>
+
+        <p class="mortgage-text">Many people need a mortgage in order to purchase a home or other property because the cost of these assets is typically much higher than what most people can afford to pay in cash upfront.</p>
+        <p class="mortgage-text">A mortgage allows a person to spread out the cost of the property over a longer period of time, typically several years or decades. This means that instead of having to pay the full purchase price upfront, the borrower can make smaller monthly payments over time, which can be more manageable and affordable.</p>
+        <p class="mortgage-text">In addition, a mortgage can also help a borrower build equity in the property over time. As the borrower makes their monthly mortgage payments, a portion of the payment goes towards paying down the principal amount borrowed, which means the borrower gradually owns more of the property. This can be a valuable long-term investment, as the borrower may be able to sell the property at a higher price than they paid for it, or use the equity they've built up to finance other expenses.</p>
+        <p class="mortgage-text">Overall, a mortgage can be a useful financial tool for anyone looking to purchase a property, as it can help make the purchase more affordable and allow the borrower to build equity in the property over time.</p>
+
     </section>
 
     <!-- MAIN SECTION END -->
