--- a/faqs.html
+++ b/faqs.html
@@ -87,9 +87,8 @@
     <footer class="footer">
         <div class="about">
             <h1 class="footer-title">About Us</h1>
-            <p class="footer-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt assumenda nihil vel
-                autem magnam eum accusamus porro mollitia, eos ea rerum nemo aperiam repellendus similique maxime,
-                reiciendis animi aliquid quia?</p>
+            <p class="footer-text">As the owner of Desh Capital LLC, We are committed to helping my clients achieve their dream of homeownership. With years of experience in the mortgage industry, we provide personalized service and attention to detail to identify the best mortgage solution for each client's unique needs and goals. We pride ourselves on honesty, integrity, and professionalism, and are dedicated to building long-term relationships with our clients to help them achieve their financial dreams. Choose Desh Capital LLC for a positive and successful mortgage experience. </p>
+            <p class="footer-text">Follow us on</p>
 
             <ul class="icon">
                 <li><a href="https://www.facebook.com/deshcapitalllc/" target="_blank"><i
