--- a/aboutUs.html
+++ b/aboutUs.html
@@ -15,7 +15,7 @@
 
     <!-- CSS FILE LINK -->
     <link rel="stylesheet" href="Styles/headers.css">
-    <link rel="stylesheet" href="Styles/index.css">
+    <link rel="stylesheet" href="Styles/aboutUs.css">
     <link rel="stylesheet" href="Styles/footer.css">
 
 
@@ -80,14 +80,77 @@
 
     <!-- HEADER SECTION END -->
 
+    <section class="aboutus-section">
+        <a class="switch-btn" href="aboutUsBangla.html">বাংলা</a>
+        <div class="section-btn">
+            <a class="about-section" href="#aboutus">About Us</a>
+            <a class="team-section" href="#team">Our Team</a>
+        </div>
+    </section>
+    <section class="aboutus" id="aboutus">
+        <h1 class="aboutus-team-title">About Us</h1>
+        <hr>
+        <p class="aboutus-text">As the owner of Desh Capital LLC, a mortgage brokerage firm, I am committed to helping
+            my clients achieve their dream of homeownership. With years of experience in the mortgage industry, I have
+            developed a deep understanding of the various loan products and programs available to borrowers, and I am
+            dedicated to helping my clients find the best mortgage solution for their unique needs and goals.</p>
+        <p class="aboutus-text">At Desh Capital LLC, we believe in providing our clients with personalized service and
+            attention to detail. We take the time to understand each client's individual situation and work closely with
+            them to identify the loan product that best fits their needs and budget. Whether a client is a first-time
+            homebuyer or a seasoned investor, we are here to guide them through the mortgage process and ensure a smooth
+            and stress-free experience.</p>
+        <p class="aboutus-text">We pride ourselves on our honesty, integrity, and professionalism. We believe in
+            building long-term relationships with our clients, and we are committed to providing the highest level of
+            customer service and support. Our goal is to help our clients achieve their financial goals and dreams, and
+            we are dedicated to doing everything we can to make that happen.</p>
+        <p class="aboutus-text">If you're looking for a mortgage broker who is knowledgeable, experienced, and committed
+            to your success, look no further than Desh Capital LLC. We are here to help you every step of the way and to
+            ensure that your mortgage experience is a positive and successful one.</p>
+    </section>
+    <section class="teams" id="team">
+        <h1 class="aboutus-team-title space">Our Team</h1>
+        <hr>
+        <div class="team-box">
+            <div class="team">
+                <img src="Assets/Images/Team/mrf.jpg" alt="Loading...">
+                <h3 class="name">Maruf Ahmed</h3>
+                <h5 class="des">Designation</h5>
+                <ul class="team-icon">
+                    <li><a href="" target="_blank"><i class="fab fa-linkedin"></i></a></li>
+                    <li><a href="https://www.facebook.com/mlomaruf" target="_blank"><i
+                                class="fab fa-facebook-square"></i></a></li>
+                    <li><a href="mailto:info@deshcapitalllc.com" target="_blank"><i class="fas fa-envelope"></i></a>
+                    </li>
+                </ul>
+            </div>
+            <div class="team">
+                <img src="Assets/Images/Team/shadik.jpg" alt="Loading...">
+                <h3 class="name">Shadik Hasan</h3>
+                <h5 class="des">Designation</h5>
+                <ul class="team-icon">
+                    <li><a href="https://www.linkedin.com/in/shadik-hasan-2ba56b1ab/" target="_blank"><i class="fab fa-linkedin"></i></a></li>
+                    <li><a href="https://www.facebook.com/md.shadikhasansk/" target="_blank"><i
+                                class="fab fa-facebook-square"></i></a></li>
+                    <li><a href="mailto:shadikhasan.cse@gmail.com" target="_blank"><i class="fas fa-envelope"></i></a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </section>
+
     <!-- MAIN SECTION START -->
-     <!-- MAIN SECTION END -->
+    <!-- MAIN SECTION END -->
 
     <!-- FOOTER START -->
     <footer class="footer">
         <div class="about">
             <h1 class="footer-title">About Us</h1>
-            <p class="footer-text">As the owner of Desh Capital LLC, We are committed to helping my clients achieve their dream of homeownership. With years of experience in the mortgage industry, we provide personalized service and attention to detail to identify the best mortgage solution for each client's unique needs and goals. We pride ourselves on honesty, integrity, and professionalism, and are dedicated to building long-term relationships with our clients to help them achieve their financial dreams. Choose Desh Capital LLC for a positive and successful mortgage experience. </p>
+            <p class="footer-text">As the owner of Desh Capital LLC, We are committed to helping my clients achieve
+                their dream of homeownership. With years of experience in the mortgage industry, we provide personalized
+                service and attention to detail to identify the best mortgage solution for each client's unique needs
+                and goals. We pride ourselves on honesty, integrity, and professionalism, and are dedicated to building
+                long-term relationships with our clients to help them achieve their financial dreams. Choose Desh
+                Capital LLC for a positive and successful mortgage experience. </p>
             <p class="footer-text">Follow us on</p>
 
             <ul class="icon">
