--- a/aboutUs.html
+++ b/aboutUs.html
@@ -123,7 +123,7 @@
                     </li>
                 </ul>
             </div>
-            <div class="team">
+            <!-- <div class="team">
                 <img src="Assets/Images/Team/shadik.jpg" alt="Loading...">
                 <h3 class="name">Shadik Hasan</h3>
                 <h5 class="des">Designation</h5>
@@ -134,7 +134,7 @@
                     <li><a href="mailto:shadikhasan.cse@gmail.com" target="_blank"><i class="fas fa-envelope"></i></a>
                     </li>
                 </ul>
-            </div>
+            </div> -->
         </div>
     </section>
 
