Bangla About Us

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -90,10 +90,10 @@
     <section class="aboutus" id="aboutus">
         <h1 class="aboutus-team-title">About Us</h1>
         <hr>
-        <p class="aboutus-text">As the owner of Desh Capital LLC, a mortgage brokerage firm, I am committed to helping
-            my clients achieve their dream of homeownership. With years of experience in the mortgage industry, I have
-            developed a deep understanding of the various loan products and programs available to borrowers, and I am
-            dedicated to helping my clients find the best mortgage solution for their unique needs and goals.</p>
+        <p class="aboutus-text">As the team of Desh Capital LLC, We are committed to helping
+            our clients achieve their dream of homeownership. With years of experience in the mortgage industry, We have
+            developed a deep understanding of the various loan products and programs available to borrowers, and We are
+            dedicated to helping our clients find the best mortgage solution for their unique needs and goals.</p>
         <p class="aboutus-text">At Desh Capital LLC, we believe in providing our clients with personalized service and
             attention to detail. We take the time to understand each client's individual situation and work closely with
             them to identify the loan product that best fits their needs and budget. Whether a client is a first-time
