--- a/aboutUsBangla.html
+++ b/aboutUsBangla.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Desh Capital LLC | About Us Ban</title>
+    <title>Desh Capital LLC | আমরা কারা</title>
     <link rel="shortcut icon" type="image/png" href="Assets/Images/Logo.jpg">
 
     <!-- FONTASOME CDN -->
@@ -15,7 +15,7 @@
 
     <!-- CSS FILE LINK -->
     <link rel="stylesheet" href="Styles/headers.css">
-    <link rel="stylesheet" href="Styles/index.css">
+    <link rel="stylesheet" href="Styles/aboutUs.css">
     <link rel="stylesheet" href="Styles/footer.css">
 
 
@@ -80,14 +80,77 @@
 
     <!-- HEADER SECTION END -->
 
+    <section class="aboutus-section">
+        <a class="switch-btn" href="aboutUs.html">English</a>
+        <div class="section-btn">
+            <a class="about-section" href="#aboutus">আমাদের তথ্য</a>
+            <a class="team-section" href="#team">আমাদের টিম</a>
+        </div>
+    </section>
+    <section class="aboutus" id="aboutus">
+        <h1 class="aboutus-team-title">আমাদের তথ্য</h1>
+        <hr>
+        <p class="aboutus-text">Desh Capital LLC এর দল হিসেবে, আমরা সাহায্য করতে প্রতিশ্রুতিবদ্ধ
+            আমাদের ক্লায়েন্টরা তাদের বাড়ির মালিকানার স্বপ্ন অর্জন করে। বন্ধকী শিল্পে বছরের অভিজ্ঞতার সাথে, আমাদের আছে
+            ঋণগ্রহীতাদের জন্য উপলব্ধ বিভিন্ন লোন প্রোডাক্ট এবং প্রোগ্রামগুলির একটি গভীর বোঝাপড়া তৈরি করেছে এবং আমরা করছি
+            আমাদের ক্লায়েন্টদের তাদের অনন্য চাহিদা এবং লক্ষ্যগুলির জন্য সর্বোত্তম বন্ধকী সমাধান খুঁজে পেতে সাহায্য করার জন্য নিবেদিত।</p>
+        <p class="aboutus-text">Desh Capital LLC-তে, আমরা আমাদের ক্লায়েন্টদের ব্যক্তিগতকৃত পরিষেবা এবং প্রদানে বিশ্বাস করি
+            বিস্তারিত মনোযোগ। আমরা প্রতিটি ক্লায়েন্টের পৃথক পরিস্থিতি বুঝতে এবং ঘনিষ্ঠভাবে কাজ করার জন্য সময় নিই
+            তারা তাদের চাহিদা এবং বাজেটের সাথে মানানসই ঋণ পণ্য সনাক্ত করতে। একজন ক্লায়েন্ট প্রথমবার কিনা
+            বাড়ির ক্রেতা বা একজন পাকা বিনিয়োগকারী, আমরা এখানে তাদের মর্টগেজ প্রক্রিয়ার মাধ্যমে গাইড করতে এবং একটি মসৃণ নিশ্চিত করতে এসেছি
+            এবং চাপমুক্ত অভিজ্ঞতা।</p>
+        <p class="aboutus-text">আমরা আমাদের সততা, সততা এবং পেশাদারিত্বের জন্য নিজেদেরকে গর্বিত করি। আমরা বিশ্বাস করি
+            আমাদের ক্লায়েন্টদের সাথে দীর্ঘমেয়াদী সম্পর্ক গড়ে তোলা, এবং আমরা সর্বোচ্চ স্তর প্রদান করতে প্রতিশ্রুতিবদ্ধ
+            গ্রাহক সেবা এবং সমর্থন। আমাদের লক্ষ্য হল আমাদের ক্লায়েন্টদের তাদের আর্থিক লক্ষ্য এবং স্বপ্ন অর্জনে সাহায্য করা এবং
+            আমরা যে ঘটতে পারে সবকিছু করতে নিবেদিত.</p>
+        <p class="aboutus-text">আপনি যদি একজন মর্টগেজ ব্রোকার খুঁজছেন যিনি জ্ঞানী, অভিজ্ঞ এবং প্রতিশ্রুতিবদ্ধ
+            আপনার সাফল্যের জন্য, Desh Capital LLC ছাড়া আর তাকাবেন না। আমরা আপনাকে পথের প্রতিটি ধাপে সাহায্য করতে এখানে আছি
+            নিশ্চিত করুন যে আপনার বন্ধকী অভিজ্ঞতা একটি ইতিবাচক এবং সফল একটি।</p>
+    </section>
+    <section class="teams" id="team">
+        <h1 class="aboutus-team-title space">আমাদের টিম</h1>
+        <hr>
+        <div class="team-box">
+            <div class="team">
+                <img src="Assets/Images/Team/mrf.jpg" alt="Loading...">
+                <h3 class="name">মারুফ আহমেদ</h3>
+                <h5 class="des">Designation</h5>
+                <ul class="team-icon">
+                    <li><a href="" target="_blank"><i class="fab fa-linkedin"></i></a></li>
+                    <li><a href="https://www.facebook.com/mlomaruf" target="_blank"><i
+                                class="fab fa-facebook-square"></i></a></li>
+                    <li><a href="mailto:info@deshcapitalllc.com" target="_blank"><i class="fas fa-envelope"></i></a>
+                    </li>
+                </ul>
+            </div>
+            <!-- <div class="team">
+                <img src="Assets/Images/Team/shadik.jpg" alt="Loading...">
+                <h3 class="name">Shadik Hasan</h3>
+                <h5 class="des">Designation</h5>
+                <ul class="team-icon">
+                    <li><a href="https://www.linkedin.com/in/shadik-hasan-2ba56b1ab/" target="_blank"><i class="fab fa-linkedin"></i></a></li>
+                    <li><a href="https://www.facebook.com/md.shadikhasansk/" target="_blank"><i
+                                class="fab fa-facebook-square"></i></a></li>
+                    <li><a href="mailto:shadikhasan.cse@gmail.com" target="_blank"><i class="fas fa-envelope"></i></a>
+                    </li>
+                </ul>
+            </div> -->
+        </div>
+    </section>
+
     <!-- MAIN SECTION START -->
-     <!-- MAIN SECTION END -->
+    <!-- MAIN SECTION END -->
 
     <!-- FOOTER START -->
     <footer class="footer">
         <div class="about">
             <h1 class="footer-title">About Us</h1>
-            <p class="footer-text">As the owner of Desh Capital LLC, We are committed to helping my clients achieve their dream of homeownership. With years of experience in the mortgage industry, we provide personalized service and attention to detail to identify the best mortgage solution for each client's unique needs and goals. We pride ourselves on honesty, integrity, and professionalism, and are dedicated to building long-term relationships with our clients to help them achieve their financial dreams. Choose Desh Capital LLC for a positive and successful mortgage experience. </p>
+            <p class="footer-text">As the owner of Desh Capital LLC, We are committed to helping my clients achieve
+                their dream of homeownership. With years of experience in the mortgage industry, we provide personalized
+                service and attention to detail to identify the best mortgage solution for each client's unique needs
+                and goals. We pride ourselves on honesty, integrity, and professionalism, and are dedicated to building
+                long-term relationships with our clients to help them achieve their financial dreams. Choose Desh
+                Capital LLC for a positive and successful mortgage experience. </p>
             <p class="footer-text">Follow us on</p>
 
             <ul class="icon">
