Bangla About Us

--- a/aboutUsBangla.html
+++ b/aboutUsBangla.html
@@ -125,7 +125,7 @@
             </div>
             <!-- <div class="team">
                 <img src="Assets/Images/Team/shadik.jpg" alt="Loading...">
-                <h3 class="name">Shadik Hasan</h3>
+                <h3 class="name">সাদিক হাসান</h3>
                 <h5 class="des">Designation</h5>
                 <ul class="team-icon">
                     <li><a href="https://www.linkedin.com/in/shadik-hasan-2ba56b1ab/" target="_blank"><i class="fab fa-linkedin"></i></a></li>
