--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 <li><a href="mortgageInfoBangla.html">মটগেজ তথ্য</a></li>
                 <li><a href="loanProgramsBangla.html">লোন সমূহ</a></li>
                 <li><a href="faqsBangla.html">প্রশ্ন ও উত্তর</a></li>
-                <li><a href="aboutUsBangla.html">আমরা কারা?</a></li>
+                <li><a href="aboutUsBangla.html">আমাদের তথ্য</a></li>
                 <li><a href="contactUs.html">যোগাযোগ</a></li>
             </ul>
         </div>
@@ -291,7 +291,7 @@
     <footer class="footer">
         <div class="about">
             <h1 class="footer-title">About Us</h1>
-            <p class="footer-text">As the owner of Desh Capital LLC, We are committed to helping my clients achieve their dream of homeownership. With years of experience in the mortgage industry, we provide personalized service and attention to detail to identify the best mortgage solution for each client's unique needs and goals. We pride ourselves on honesty, integrity, and professionalism, and are dedicated to building long-term relationships with our clients to help them achieve their financial dreams. Choose Desh Capital LLC for a positive and successful mortgage experience. </p>
+            <p class="footer-text">As the owner of Desh Capital LLC, I am committed to helping my clients achieve their dream of homeownership. With years of experience in the mortgage industry, I provide personalized service and attention to detail to identify the best mortgage solution for each client's unique needs and goals. I pride myself on honesty, integrity, and professionalism, and am dedicated to building long-term relationships with my clients to help them achieve their financial dreams. Choose Desh Capital LLC for a positive and successful mortgage experience.</p>
             <p class="footer-text">Follow us on</p>
 
             <ul class="icon">
