Bangla Tesxt Change

--- a/aboutUsBangla.html
+++ b/aboutUsBangla.html
@@ -91,9 +91,9 @@
         <h1 class="aboutus-team-title">আমাদের তথ্য</h1>
         <hr>
         <p class="aboutus-text">Desh Capital LLC এর দল হিসেবে, আমরা সাহায্য করতে প্রতিশ্রুতিবদ্ধ
-            আমাদের ক্লায়েন্টরা তাদের বাড়ির মালিকানার স্বপ্ন অর্জন করে। বন্ধকী শিল্পে বছরের অভিজ্ঞতার সাথে, আমাদের আছে
+            আমাদের ক্লায়েন্টরা তাদের বাড়ির মালিকানার স্বপ্ন অর্জন করে। মটগেজ শিল্পে বছরের অভিজ্ঞতার সাথে, আমাদের আছে
             ঋণগ্রহীতাদের জন্য উপলব্ধ বিভিন্ন লোন প্রোডাক্ট এবং প্রোগ্রামগুলির একটি গভীর বোঝাপড়া তৈরি করেছে এবং আমরা করছি
-            আমাদের ক্লায়েন্টদের তাদের অনন্য চাহিদা এবং লক্ষ্যগুলির জন্য সর্বোত্তম বন্ধকী সমাধান খুঁজে পেতে সাহায্য করার জন্য নিবেদিত।</p>
+            আমাদের ক্লায়েন্টদের তাদের অনন্য চাহিদা এবং লক্ষ্যগুলির জন্য সর্বোত্তম মটগেজ সমাধান খুঁজে পেতে সাহায্য করার জন্য নিবেদিত।</p>
         <p class="aboutus-text">Desh Capital LLC-তে, আমরা আমাদের ক্লায়েন্টদের ব্যক্তিগতকৃত পরিষেবা এবং প্রদানে বিশ্বাস করি
             বিস্তারিত মনোযোগ। আমরা প্রতিটি ক্লায়েন্টের পৃথক পরিস্থিতি বুঝতে এবং ঘনিষ্ঠভাবে কাজ করার জন্য সময় নিই
             তারা তাদের চাহিদা এবং বাজেটের সাথে মানানসই ঋণ পণ্য সনাক্ত করতে। একজন ক্লায়েন্ট প্রথমবার কিনা
@@ -105,7 +105,7 @@
             আমরা যে ঘটতে পারে সবকিছু করতে নিবেদিত.</p>
         <p class="aboutus-text">আপনি যদি একজন মর্টগেজ ব্রোকার খুঁজছেন যিনি জ্ঞানী, অভিজ্ঞ এবং প্রতিশ্রুতিবদ্ধ
             আপনার সাফল্যের জন্য, Desh Capital LLC ছাড়া আর তাকাবেন না। আমরা আপনাকে পথের প্রতিটি ধাপে সাহায্য করতে এখানে আছি
-            নিশ্চিত করুন যে আপনার বন্ধকী অভিজ্ঞতা একটি ইতিবাচক এবং সফল একটি।</p>
+            নিশ্চিত করুন যে আপনার মটগেজ অভিজ্ঞতা একটি ইতিবাচক এবং সফল একটি।</p>
     </section>
     <section class="teams" id="team">
         <h1 class="aboutus-team-title space">আমাদের টিম</h1>
