--- a/mortgageInfoBangla.html
+++ b/mortgageInfoBangla.html
@@ -86,16 +86,16 @@
         <h1 class="mortgages-title">মটগেজ তথ্য</h1>
         <hr>
         <h5 class="mortgage-header">মটগেজ হল:</h5>
-        <p class="mortgage-text">একটি বন্ধকী একটি ঋণ যা একটি সম্পত্তি কেনার জন্য ব্যবহৃত হয়, সাধারণত একটি বাড়ি। ঋণটি সাধারণত একটি ঋণদাতা দ্বারা প্রদান করা হয়, যেমন একটি ব্যাঙ্ক বা একটি বন্ধকী কোম্পানি, এবং ঋণগ্রহীতাকে একটি নির্দিষ্ট সময়ের মধ্যে, সাধারণত কয়েক বছর বা কয়েক দশক ধরে ঋণ পরিশোধ করতে হয়।</p>
-        <p class="mortgage-text">যখন কেউ একটি বন্ধক নেয়, তারা যে সম্পত্তি কিনতে চায় তার জন্য অর্থ প্রদানের জন্য তারা প্রচুর পরিমাণে অর্থ ধার করছে। ঋণদাতা সাধারণত ঋণগ্রহীতাকে সম্পত্তিতে একটি ডাউন পেমেন্ট করতে চান, যা ক্রয় মূল্যের একটি অংশ যা ঋণগ্রহীতা অগ্রিম প্রদান করে। ক্রয় মূল্যের বাকি অংশ বন্ধকী ঋণের আওতায় পড়ে।</p>
-        <p class="mortgage-text">ঋণের বিনিময়ে, ঋণদাতা ধার করা পরিমাণের উপর সুদ ধার্য করবে, যা সাধারণত বন্ধকের জীবনকাল ধরে নিয়মিত কিস্তিতে ফেরত দেওয়া হয়। সুদের হার, ঋণের দৈর্ঘ্য এবং মাসিক অর্থপ্রদানের পরিমাণ সহ বন্ধকের শর্তাবলী, ঋণগ্রহীতা এবং ঋণদাতার মধ্যে একটি বন্ধকী চুক্তিতে নির্দিষ্ট করা হবে।</p>
+        <p class="mortgage-text">একটি মটগেজ একটি ঋণ যা একটি সম্পত্তি কেনার জন্য ব্যবহৃত হয়, সাধারণত একটি বাড়ি। ঋণটি সাধারণত একটি ঋণদাতা দ্বারা প্রদান করা হয়, যেমন একটি ব্যাঙ্ক বা একটি মটগেজ কোম্পানি, এবং ঋণগ্রহীতাকে একটি নির্দিষ্ট সময়ের মধ্যে, সাধারণত কয়েক বছর বা কয়েক দশক ধরে ঋণ পরিশোধ করতে হয়।</p>
+        <p class="mortgage-text">যখন কেউ একটি বন্ধক নেয়, তারা যে সম্পত্তি কিনতে চায় তার জন্য অর্থ প্রদানের জন্য তারা প্রচুর পরিমাণে অর্থ ধার করছে। ঋণদাতা সাধারণত ঋণগ্রহীতাকে সম্পত্তিতে একটি ডাউন পেমেন্ট করতে চান, যা ক্রয় মূল্যের একটি অংশ যা ঋণগ্রহীতা অগ্রিম প্রদান করে। ক্রয় মূল্যের বাকি অংশ মটগেজ ঋণের আওতায় পড়ে।</p>
+        <p class="mortgage-text">ঋণের বিনিময়ে, ঋণদাতা ধার করা পরিমাণের উপর সুদ ধার্য করবে, যা সাধারণত বন্ধকের জীবনকাল ধরে নিয়মিত কিস্তিতে ফেরত দেওয়া হয়। সুদের হার, ঋণের দৈর্ঘ্য এবং মাসিক অর্থপ্রদানের পরিমাণ সহ বন্ধকের শর্তাবলী, ঋণগ্রহীতা এবং ঋণদাতার মধ্যে একটি মটগেজ চুক্তিতে নির্দিষ্ট করা হবে।</p>
 
         <h5 class="mortgage-header">মটগেজ প্রয়োজন কারণ:</h5>
 
-        <p class="mortgage-text">অনেক লোকের একটি বাড়ি বা অন্যান্য সম্পত্তি কেনার জন্য একটি বন্ধকী প্রয়োজন কারণ এই সম্পদের মূল্য সাধারণত বেশিরভাগ লোকেরা নগদ অগ্রিম অর্থ প্রদানের সামর্থ্যের তুলনায় অনেক বেশি।</p>
+        <p class="mortgage-text">অনেক লোকের একটি বাড়ি বা অন্যান্য সম্পত্তি কেনার জন্য একটি মটগেজ প্রয়োজন কারণ এই সম্পদের মূল্য সাধারণত বেশিরভাগ লোকেরা নগদ অগ্রিম অর্থ প্রদানের সামর্থ্যের তুলনায় অনেক বেশি।</p>
         <p class="mortgage-text">একটি বন্ধক একজন ব্যক্তিকে সম্পত্তির মূল্য দীর্ঘ সময়ের মধ্যে ছড়িয়ে দিতে দেয়, সাধারণত কয়েক বছর বা দশক। এর মানে হল যে পুরো ক্রয় মূল্য অগ্রিম পরিশোধ করার পরিবর্তে, ঋণগ্রহীতা সময়ের সাথে সাথে ছোট মাসিক অর্থপ্রদান করতে পারে, যা আরও পরিচালনাযোগ্য এবং সাশ্রয়ী হতে পারে।</p>
-        <p class="mortgage-text">উপরন্তু, একটি বন্ধকী সময়ের সাথে সাথে সম্পত্তিতে ইক্যুইটি তৈরি করতে ঋণগ্রহীতাকে সাহায্য করতে পারে। যেহেতু ঋণগ্রহীতা তাদের মাসিক বন্ধকী অর্থ প্রদান করে, অর্থপ্রদানের একটি অংশ ধার করা মূল পরিমাণ পরিশোধের দিকে যায়, যার অর্থ ঋণগ্রহীতা ধীরে ধীরে আরও বেশি সম্পত্তির মালিক হন। এটি একটি মূল্যবান দীর্ঘমেয়াদী বিনিয়োগ হতে পারে, কারণ ঋণগ্রহীতা তাদের অর্থ প্রদানের চেয়ে বেশি মূল্যে সম্পত্তি বিক্রি করতে সক্ষম হতে পারে, অথবা অন্যান্য খরচের অর্থায়নের জন্য তারা যে ইক্যুইটি তৈরি করেছে তা ব্যবহার করতে পারে।</p>
-        <p class="mortgage-text">সামগ্রিকভাবে, একটি বন্ধকী যে কেউ একটি সম্পত্তি ক্রয় করতে চাইছেন তাদের জন্য একটি দরকারী আর্থিক হাতিয়ার হতে পারে, কারণ এটি ক্রয়কে আরও সাশ্রয়ী করতে সাহায্য করতে পারে এবং ঋণগ্রহীতাকে সময়ের সাথে সাথে সম্পত্তিতে ইক্যুইটি তৈরি করতে সহায়তা করতে পারে।</p>
+        <p class="mortgage-text">উপরন্তু, একটি মটগেজ সময়ের সাথে সাথে সম্পত্তিতে ইক্যুইটি তৈরি করতে ঋণগ্রহীতাকে সাহায্য করতে পারে। যেহেতু ঋণগ্রহীতা তাদের মাসিক মটগেজ অর্থ প্রদান করে, অর্থপ্রদানের একটি অংশ ধার করা মূল পরিমাণ পরিশোধের দিকে যায়, যার অর্থ ঋণগ্রহীতা ধীরে ধীরে আরও বেশি সম্পত্তির মালিক হন। এটি একটি মূল্যবান দীর্ঘমেয়াদী বিনিয়োগ হতে পারে, কারণ ঋণগ্রহীতা তাদের অর্থ প্রদানের চেয়ে বেশি মূল্যে সম্পত্তি বিক্রি করতে সক্ষম হতে পারে, অথবা অন্যান্য খরচের অর্থায়নের জন্য তারা যে ইক্যুইটি তৈরি করেছে তা ব্যবহার করতে পারে।</p>
+        <p class="mortgage-text">সামগ্রিকভাবে, একটি মটগেজ যে কেউ একটি সম্পত্তি ক্রয় করতে চাইছেন তাদের জন্য একটি দরকারী আর্থিক হাতিয়ার হতে পারে, কারণ এটি ক্রয়কে আরও সাশ্রয়ী করতে সাহায্য করতে পারে এবং ঋণগ্রহীতাকে সময়ের সাথে সাথে সম্পত্তিতে ইক্যুইটি তৈরি করতে সহায়তা করতে পারে।</p>
     </section>
 
     <!-- MAIN SECTION END -->
