--- a/calculator.html
+++ b/calculator.html
@@ -81,13 +81,18 @@
     <!-- HEADER SECTION END -->
 
     <!-- MAIN SECTION START -->
-     <!-- MAIN SECTION END -->
+    <!-- MAIN SECTION END -->
 
     <!-- FOOTER START -->
     <footer class="footer">
         <div class="about">
             <h1 class="footer-title">About Us</h1>
-            <p class="footer-text">As the owner of Desh Capital LLC, I am committed to helping my clients achieve their dream of homeownership. With years of experience in the mortgage industry, I provide personalized service and attention to detail to identify the best mortgage solution for each client's unique needs and goals. I pride myself on honesty, integrity, and professionalism, and am dedicated to building long-term relationships with my clients to help them achieve their financial dreams. Choose Desh Capital LLC for a positive and successful mortgage experience.</p>
+            <p class="footer-text">As the owner of Desh Capital LLC, I am committed to helping my clients achieve their
+                dream of homeownership. With years of experience in the mortgage industry, I provide personalized
+                service and attention to detail to identify the best mortgage solution for each client's unique needs
+                and goals. I pride myself on honesty, integrity, and professionalism, and am dedicated to building
+                long-term relationships with my clients to help them achieve their financial dreams. Choose Desh Capital
+                LLC for a positive and successful mortgage experience.</p>
             <p class="footer-text">Follow us on</p>
 
             <ul class="icon">
