--- a/contactUs.html
+++ b/contactUs.html
@@ -15,7 +15,7 @@
 
     <!-- CSS FILE LINK -->
     <link rel="stylesheet" href="Styles/headers.css">
-    <link rel="stylesheet" href="Styles/index.css">
+    <link rel="stylesheet" href="Styles/contactUs.css">
     <link rel="stylesheet" href="Styles/footer.css">
 
 
@@ -81,6 +81,45 @@
     <!-- HEADER SECTION END -->
 
     <!-- MAIN SECTION START -->
+    <section class="contactus">
+        <iframe title="" class="contact-maps"
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4248.400548399734!2d-81.48490118459267!3d28.324574404702034!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88dd8185579284d3%3A0xeda2f0ec1ecbeecb!2s2627%20Chatham%20Cir%2C%20Kissimmee%2C%20FL%2034746%2C%20USA!5e1!3m2!1sen!2sbd!4v1679847804749!5m2!1sen!2sbd"
+                allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <div class="contact-infos">
+                    <div class="contact-info-sec">
+                        <h1 class="contact-infos-title">Contact Information</h1>
+
+                        <p class="contact-info-text"><span class="contact-info-bold">Address:</span> 2627 Chatham Circle <br>Kissimmee,
+                            FL 34746</p>
+                        <p class="contact-info-text"><span class="contact-info-bold">Telephone:</span><a href="tel:(844) 337 4227">(844) 337 4227</a></p>
+                        <p class="contact-info-text"><span class="contact-info-bold">Telephone:</span><a href="tel:(844) 337 DESH CAP">(844) 337 DESH CAP</a></p>
+                        <p class="contact-info-text"><span class="contact-info-bold">Fax:</span><a href="fax:(407) 305 7002">(407) 305 7002</a></p>
+                        <p class="contact-info-text"><span class="contact-info-bold">Mail:</span><a href="mailto:info@deshcapitalllc.com">info@deshcapitalllc.com</a></p>
+                        <p class="contact-info-text">M-F 9am 5pm EST</p>
+                    </div>
+                    <div class="contact-sec">
+                        <h1 class="contact-infos-title">Contact Message</h1>
+                        <form class="contact-form" action="">
+                            <label class="contact-form-label" for="name">Name:</label><br>
+                            <input class="contact-form-input" type="text" name="" id="" placeholder="Enter Name"><br>
+                            <label class="contact-form-label" for="email">Email:</label><br>
+                            <input class="contact-form-input" type="text" name="" id="" placeholder="Enter Email"><br>
+                            <label class="contact-form-label" for="phone">Phone:</label><br>
+                            <input class="contact-form-input" type="text" name="" id="" placeholder="Enter Phone"><br>
+                            <label class="contact-form-label" for="subject">Subject:</label><br>
+                            <input class="contact-form-input" type="text" name="" id="" placeholder="Enter Subject"><br>
+                            <label class="contact-form-label" for="message">Message:</label><br>
+                            <textarea class="contact-form-input" rows="5" name="" id="" placeholder="Enter Message Here"></textarea><br>
+
+                            <div class="contact-form-btn">
+                                <button class="contact-form-btn-reset" type="reset">Reset</button>
+                                <button class="contact-form-btn-submit" type="submit">Submit</button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+
+    </section>
      <!-- MAIN SECTION END -->
 
     <!-- FOOTER START -->
