--- a/calculator.html
+++ b/calculator.html
@@ -15,7 +15,7 @@
 
     <!-- CSS FILE LINK -->
     <link rel="stylesheet" href="Styles/headers.css">
-    <link rel="stylesheet" href="Styles/index.css">
+    <link rel="stylesheet" href="Styles/calculator.css">
     <link rel="stylesheet" href="Styles/footer.css">
 
 
@@ -81,6 +81,75 @@
     <!-- HEADER SECTION END -->
 
     <!-- MAIN SECTION START -->
+    <section class="calculator">
+        <a class="switch-btn" href="calculatorBangla.html">বাংলা</a>
+        <div class="additional-payment">
+            <h1 class="calculator-title">Additional Payment Calculator</h1>
+            <hr>
+            <div class="calculator-form">
+                <form>
+                    <label class="calculator-label" for="loan-amount">Loan Amount ($):</label><br>
+                    <input class="calculator-input" type="number" id="loan-amount" name="loan-amount" required><br>
+
+                    <label class="calculator-label" for="interest-rate">Interest Rate (%):</label><br>
+                    <input class="calculator-input" type="number" id="interest-rate" name="interest-rate" required><br>
+
+                    <label class="calculator-label" for="loan-term">Loan Term (Year):</label><br>
+                    <input class="calculator-input" type="number" id="loan-term" name="loan-term" required><br>
+
+                    <label class="calculator-label" for="additional-payment">Additional Payment ($):</label><br>
+                    <input class="calculator-input" type="number" id="additional-payment" name="additional-payment"><br>
+
+                    <div class="calculator-form-btn">
+                        <button class="calculator-form-btn-reset" type="reset">Reset</button>
+                        <button class="calculator-form-btn-submit" type="submit">Calculate</button>
+                    </div>
+
+                </form>
+                <p class="result" id="result"></p>
+            </div>
+        </div>
+
+        <div class="rentvsbuy">
+            <h1 class="calculator-title">Rent vs Buy Calculator</h1>
+            <hr>
+            <div class="calculator-form">
+                <form>
+                    <label class="calculator-label" for="homePrice">Home Price ($):</label><br>
+                    <input class="calculator-input" type="number" id="homePrice" name="homePrice"><br>
+
+                    <label class="calculator-label" for="downPayment">Down Payment (%):</label><br>
+                    <input class="calculator-input" type="number" id="downPayment" name="downPayment"><br>
+
+                    <label class="calculator-label" for="interestRate">Interest Rate (%):</label><br>
+                    <input class="calculator-input" type="number" id="interestRate" name="interestRate"><br>
+
+                    <label class="calculator-label" for="loanTerm">Loan Term (Year):</label><br>
+                    <input class="calculator-input" type="number" id="loanTerm" name="loanTerm"><br>
+
+                    <label class="calculator-label" for="propertyTax">Property Tax ($):</label><br>
+                    <input class="calculator-input" type="number" id="propertyTax" name="propertyTax"><br>
+
+                    <label class="calculator-label" for="insurance">Insurance ($):</label><br>
+                    <input class="calculator-input" type="number" id="insurance" name="insurance"><br>
+
+                    <label class="calculator-label" for="rent">Rent ($):</label><br>
+                    <input class="calculator-input" type="number" id="rent" name="rent"><br>
+
+                    <label class="calculator-label" for="rentIncrease">Rent Increase (%):</label><br>
+                    <input class="calculator-input" type="number" id="rentIncrease" name="rentIncrease"><br>
+
+                    <div class="calculator-form-btn">
+                        <button class="calculator-form-btn-reset" type="reset">Reset</button>
+                        <button class="calculator-form-btn-submit" type="button" onclick="calculate()">Calculate</button>
+                    </div>
+
+                </form>
+
+                <div class="result" id="result_buy"></div>
+            </div>
+        </div>
+    </section>
     <!-- MAIN SECTION END -->
 
     <!-- FOOTER START -->
@@ -143,6 +212,8 @@
     <!-- FOOTER END -->
 
     <!-- JAVASCRIPT FILE LINK -->
+    <script src="Javascript/calculator.js"></script>
+    <script src="Javascript/calculator2.js"></script>
     <script src="Javascript/headers.js"></script>
     <script src="Javascript/footer.js"></script>
 </body>
