--- a/calculatorBangla.html
+++ b/calculatorBangla.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Desh Capital LLC | Calculator Ban</title>
+    <title>Desh Capital LLC | ক্যালকুলেটর</title>
     <link rel="shortcut icon" type="image/png" href="Assets/Images/Logo.jpg">
 
     <!-- FONTASOME CDN -->
@@ -15,7 +15,7 @@
 
     <!-- CSS FILE LINK -->
     <link rel="stylesheet" href="Styles/headers.css">
-    <link rel="stylesheet" href="Styles/index.css">
+    <link rel="stylesheet" href="Styles/calculator.css">
     <link rel="stylesheet" href="Styles/footer.css">
 
 
@@ -81,13 +81,87 @@
     <!-- HEADER SECTION END -->
 
     <!-- MAIN SECTION START -->
-     <!-- MAIN SECTION END -->
+    <section class="calculator">
+        <a class="switch-btn" href="calculator.html">English</a>
+        <div class="additional-payment">
+            <h1 class="calculator-title">অতিরিক্ত পেমেন্ট ক্যালকুলেটর</h1>
+            <hr>
+            <div class="calculator-form">
+                <form>
+                    <label class="calculator-label" for="loan-amount">লোন পরিমাণ ($):</label><br>
+                    <input class="calculator-input" type="number" id="loan-amount" name="loan-amount" required><br>
+
+                    <label class="calculator-label" for="interest-rate">ইন্টারেস্ট রেট (%):</label><br>
+                    <input class="calculator-input" type="number" id="interest-rate" name="interest-rate" required><br>
+
+                    <label class="calculator-label" for="loan-term">লোনের মেয়াদ (বছর):</label><br>
+                    <input class="calculator-input" type="number" id="loan-term" name="loan-term" required><br>
+
+                    <label class="calculator-label" for="additional-payment">অতিরিক্ত অর্থ প্রদান ($):</label><br>
+                    <input class="calculator-input" type="number" id="additional-payment" name="additional-payment"><br>
+
+                    <div class="calculator-form-btn">
+                        <button class="calculator-form-btn-reset" type="reset">রিসেট</button>
+                        <button class="calculator-form-btn-submit" type="submit">হিসাব</button>
+                    </div>
+
+                </form>
+                <p class="result" id="result"></p>
+            </div>
+        </div>
+
+        <div class="rentvsbuy">
+            <h1 class="calculator-title">ক্রয় বনাম বিক্রয়</h1>
+            <hr>
+            <div class="calculator-form">
+                <form>
+                    <label class="calculator-label" for="homePrice">বাড়ির দাম ($):</label><br>
+                    <input class="calculator-input" type="number" id="homePrice" name="homePrice"><br>
+
+                    <label class="calculator-label" for="downPayment">ডাউন পেমেন্ট (%):</label><br>
+                    <input class="calculator-input" type="number" id="downPayment" name="downPayment"><br>
+
+                    <label class="calculator-label" for="interestRate">ইন্টারেস্ট রেট (%):</label><br>
+                    <input class="calculator-input" type="number" id="interestRate" name="interestRate"><br>
+
+                    <label class="calculator-label" for="loanTerm">লোনের মেয়াদ (বছর):</label><br>
+                    <input class="calculator-input" type="number" id="loanTerm" name="loanTerm"><br>
+
+                    <label class="calculator-label" for="propertyTax">সম্পদের ট্যাক্স ($):</label><br>
+                    <input class="calculator-input" type="number" id="propertyTax" name="propertyTax"><br>
+
+                    <label class="calculator-label" for="insurance">ইনসুরেন্স ($):</label><br>
+                    <input class="calculator-input" type="number" id="insurance" name="insurance"><br>
+
+                    <label class="calculator-label" for="rent">ভাড়া ($):</label><br>
+                    <input class="calculator-input" type="number" id="rent" name="rent"><br>
+
+                    <label class="calculator-label" for="rentIncrease">ভাড়া বৃদ্ধি (%):</label><br>
+                    <input class="calculator-input" type="number" id="rentIncrease" name="rentIncrease"><br>
+
+                    <div class="calculator-form-btn">
+                        <button class="calculator-form-btn-reset" type="reset">রিসেট</button>
+                        <button class="calculator-form-btn-submit" type="button" onclick="calculate()">হিসাব</button>
+                    </div>
+
+                </form>
+
+                <div class="result" id="result_buy"></div>
+            </div>
+        </div>
+    </section>
+    <!-- MAIN SECTION END -->
 
     <!-- FOOTER START -->
     <footer class="footer">
         <div class="about">
             <h1 class="footer-title">About Us</h1>
-            <p class="footer-text">As the owner of Desh Capital LLC, I am committed to helping my clients achieve their dream of homeownership. With years of experience in the mortgage industry, I provide personalized service and attention to detail to identify the best mortgage solution for each client's unique needs and goals. I pride myself on honesty, integrity, and professionalism, and am dedicated to building long-term relationships with my clients to help them achieve their financial dreams. Choose Desh Capital LLC for a positive and successful mortgage experience.</p>
+            <p class="footer-text">As the owner of Desh Capital LLC, I am committed to helping my clients achieve their
+                dream of homeownership. With years of experience in the mortgage industry, I provide personalized
+                service and attention to detail to identify the best mortgage solution for each client's unique needs
+                and goals. I pride myself on honesty, integrity, and professionalism, and am dedicated to building
+                long-term relationships with my clients to help them achieve their financial dreams. Choose Desh Capital
+                LLC for a positive and successful mortgage experience.</p>
             <p class="footer-text">Follow us on</p>
 
             <ul class="icon">
@@ -138,6 +212,7 @@
     <!-- FOOTER END -->
 
     <!-- JAVASCRIPT FILE LINK -->
+    <script src="Javascript/calculatorBangla.js"></script>
     <script src="Javascript/headers.js"></script>
     <script src="Javascript/footer.js"></script>
 </body>
