--- a/calculatorBangla.html
+++ b/calculatorBangla.html
@@ -111,7 +111,7 @@
         </div>
 
         <div class="rentvsbuy">
-            <h1 class="calculator-title">ক্রয় বনাম বিক্রয়</h1>
+            <h1 class="calculator-title">ক্রয় বনাম ভাড়া ক্যালকুলেটর</h1>
             <hr>
             <div class="calculator-form">
                 <form>
