--- a/faqs.html
+++ b/faqs.html
@@ -15,7 +15,7 @@
 
     <!-- CSS FILE LINK -->
     <link rel="stylesheet" href="Styles/headers.css">
-    <link rel="stylesheet" href="Styles/index.css">
+    <link rel="stylesheet" href="Styles/faqs.css">
     <link rel="stylesheet" href="Styles/footer.css">
 
 
@@ -81,13 +81,72 @@
     <!-- HEADER SECTION END -->
 
     <!-- MAIN SECTION START -->
-     <!-- MAIN SECTION END -->
+    <section class="collect-faqs">
+        <h1 class="collect-faqs-title">Upload Your Question Here</h1>
+
+        <div class="collect-faqs-form">
+            <form action="">
+                <label class="collect-faqs-label" for="name">Name:</label><br>
+                <input class="collect-faqs-input" type="text" placeholder="Enter Name"><br>
+
+                <label class="collect-faqs-label" for="question">Question:</label><br>
+                <textarea class="collect-faqs-input textarea"  name="" id="" rows="10" placeholder="Enter Questions Here"></textarea><br>
+
+                <div class="collect-faqs-form-btn">
+                    <button class="collect-faqs-form-btn-reset" type="reset">Reset</button>
+                    <button class="collect-faqs-form-btn-submit" type="submit">Apply</button>
+                </div>
+            </form>
+        </div>
+    </section>
+
+    <section class="faqs">
+        <h1 class="faqs-title">FAQS</h1>
+        <div class="faq">
+            <details>
+                <summary>
+                    <h4 class="question">Why is Raycast free for personal use?</h4>
+                    <span class="down-arrow"><i class="fas fa-chevron-down"></i></span>
+                </summary>
+                <p class="answer">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ut, rerum?Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, impedit.</p>
+            </details>
+            <hr>
+        </div>
+        <div class="faq">
+            <details>
+                <summary>
+                    <h4 class="question">Why is Raycast free for personal use?</h4>
+                    <span class="down-arrow"><i class="fas fa-chevron-down"></i></span>
+                </summary>
+                <p class="answer">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, impedit.</p>
+            </details>
+            <hr>
+        </div>
+        <div class="faq">
+            <details>
+                <summary>
+                    <h4 class="question">Why is Raycast free for personal use?</h4>
+                    <span class="down-arrow"><i class="fas fa-chevron-down"></i></span>
+                </summary>
+                <p class="answer">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, impedit.</p>
+            </details>
+            <hr>
+        </div>
+
+    </section>
+
+    <!-- MAIN SECTION END -->
 
     <!-- FOOTER START -->
     <footer class="footer">
         <div class="about">
             <h1 class="footer-title">About Us</h1>
-            <p class="footer-text">As the owner of Desh Capital LLC, I am committed to helping my clients achieve their dream of homeownership. With years of experience in the mortgage industry, I provide personalized service and attention to detail to identify the best mortgage solution for each client's unique needs and goals. I pride myself on honesty, integrity, and professionalism, and am dedicated to building long-term relationships with my clients to help them achieve their financial dreams. Choose Desh Capital LLC for a positive and successful mortgage experience.</p>
+            <p class="footer-text">As the owner of Desh Capital LLC, I am committed to helping my clients achieve their
+                dream of homeownership. With years of experience in the mortgage industry, I provide personalized
+                service and attention to detail to identify the best mortgage solution for each client's unique needs
+                and goals. I pride myself on honesty, integrity, and professionalism, and am dedicated to building
+                long-term relationships with my clients to help them achieve their financial dreams. Choose Desh Capital
+                LLC for a positive and successful mortgage experience.</p>
             <p class="footer-text">Follow us on</p>
 
             <ul class="icon">
