--- a/faqs.html
+++ b/faqs.html
@@ -82,15 +82,19 @@
 
     <!-- MAIN SECTION START -->
     <section class="collect-faqs">
+        <a class="switch-btn" href="faqsBangla.html">বাংলা</a>
+        <div class="section-btn">
+            <a class="switch-btn" href="#faqs">FAQS</a>
+        </div>
         <h1 class="collect-faqs-title">Upload Your Question Here</h1>
-
         <div class="collect-faqs-form">
             <form action="">
                 <label class="collect-faqs-label" for="name">Name:</label><br>
                 <input class="collect-faqs-input" type="text" placeholder="Enter Name"><br>
 
                 <label class="collect-faqs-label" for="question">Question:</label><br>
-                <textarea class="collect-faqs-input textarea"  name="" id="" rows="10" placeholder="Enter Questions Here"></textarea><br>
+                <textarea class="collect-faqs-input textarea" name="" id="" rows="10"
+                    placeholder="Enter Questions Here"></textarea><br>
 
                 <div class="collect-faqs-form-btn">
                     <button class="collect-faqs-form-btn-reset" type="reset">Reset</button>
@@ -100,7 +104,7 @@
         </div>
     </section>
 
-    <section class="faqs">
+    <section id="faqs" class="faqs">
         <h1 class="faqs-title">FAQS</h1>
         <div class="faq">
             <details>
@@ -108,7 +112,8 @@
                     <h4 class="question">Why is Raycast free for personal use?</h4>
                     <span class="down-arrow"><i class="fas fa-chevron-down"></i></span>
                 </summary>
-                <p class="answer">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ut, rerum?Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, impedit.</p>
+                <p class="answer">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ut, rerum?Lorem ipsum dolor
+                    sit amet consectetur adipisicing elit. Odio, impedit.</p>
             </details>
             <hr>
         </div>
