--- a/faqs.html
+++ b/faqs.html
@@ -109,21 +109,20 @@
         <div class="faq">
             <details>
                 <summary>
-                    <h4 class="question">Why is Raycast free for personal use?</h4>
+                    <h4 class="question">What types of mortgages do you offer?</h4>
                     <span class="down-arrow"><i class="fas fa-chevron-down"></i></span>
                 </summary>
-                <p class="answer">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ut, rerum?Lorem ipsum dolor
-                    sit amet consectetur adipisicing elit. Odio, impedit.</p>
+                <p class="answer">At Desh Capital LLC, we offer a variety of mortgage types, including fixed-rate mortgages, adjustable-rate mortgages (ARMs), FHA loans, jumbo loans, and more. We can help you find the mortgage that best fits your needs and financial situation.</p>
             </details>
             <hr>
         </div>
         <div class="faq">
             <details>
                 <summary>
-                    <h4 class="question">Why is Raycast free for personal use?</h4>
+                    <h4 class="question">How much can I borrow for a mortgage?</h4>
                     <span class="down-arrow"><i class="fas fa-chevron-down"></i></span>
                 </summary>
-                <p class="answer">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, impedit.</p>
+                <p class="answer">The amount you can borrow for a mortgage depends on a number of factors, including your income, credit score, debt-to-income ratio, and the value of the property you are looking to purchase. Our team can work with you to determine your borrowing power and provide you with a pre-approval letter so you can start shopping for homes.</p>
             </details>
             <hr>
         </div>
