--- a/faqsBangla.html
+++ b/faqsBangla.html
@@ -109,21 +109,20 @@
         <div class="faq">
             <details>
                 <summary>
-                    <h4 class="question">Why is Raycast free for personal use?</h4>
+                    <h4 class="question">আপনারা কি ধরনের মটগেজ অফার করেন?</h4>
                     <span class="down-arrow"><i class="fas fa-chevron-down"></i></span>
                 </summary>
-                <p class="answer">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ut, rerum?Lorem ipsum dolor
-                    sit amet consectetur adipisicing elit. Odio, impedit.</p>
+                <p class="answer">দেশ ক্যাপিটাল এলএলসি-তে, আমরা বিভিন্ন ধরণের মটগেজ অফার করি, যার মধ্যে রয়েছে fixed-rate mortgages, adjustable-rate mortgages (ARMs), FHA loans, jumbo loans, এবং আরও অনেক কিছু। আমরা আপনাকে এমন মটগেজ খুঁজে পেতে সাহায্য করতে পারি যা আপনার চাহিদা এবং আর্থিক পরিস্থিতির সাথে সবচেয়ে উপযুক্ত।</p>
             </details>
             <hr>
         </div>
         <div class="faq">
             <details>
                 <summary>
-                    <h4 class="question">Why is Raycast free for personal use?</h4>
+                    <h4 class="question">আমি একটি মটগেজ জন্য কত ধার করতে পারি?</h4>
                     <span class="down-arrow"><i class="fas fa-chevron-down"></i></span>
                 </summary>
-                <p class="answer">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, impedit.</p>
+                <p class="answer">আপনি মটগেজ এর জন্য যে পরিমাণ ধার নিতে পারেন তা আপনার আয়, ক্রেডিট স্কোর, ঋণ থেকে আয়ের অনুপাত এবং আপনি যে সম্পত্তি কিনতে চাইছেন তার মূল্য সহ অনেকগুলি কারণের উপর নির্ভর করে। আমাদের দল আপনার ধার নেওয়ার ক্ষমতা নির্ধারণ করতে আপনার সাথে কাজ করতে পারে এবং আপনাকে একটি প্রাক-অনুমোদন চিঠি প্রদান করতে পারে যাতে আপনি বাড়ির জন্য কেনাকাটা শুরু করতে পারেন।</p>
             </details>
             <hr>
         </div>
