--- a/faqs.html
+++ b/faqs.html
@@ -119,6 +119,16 @@
         <div class="faq">
             <details>
                 <summary>
+                    <h4 class="question">Is Desh Capital LLC licensed and insured?</h4>
+                    <span class="down-arrow"><i class="fas fa-chevron-down"></i></span>
+                </summary>
+                <p class="answer">Yes, Desh Capital LLC is licensed and insured to provide mortgage services. Our team is dedicated to maintaining compliance with all relevant laws and regulations.</p>
+            </details>
+            <hr>
+        </div>
+        <div class="faq">
+            <details>
+                <summary>
                     <h4 class="question">How much can I borrow for a mortgage?</h4>
                     <span class="down-arrow"><i class="fas fa-chevron-down"></i></span>
                 </summary>
@@ -129,10 +139,40 @@
         <div class="faq">
             <details>
                 <summary>
-                    <h4 class="question">Why is Raycast free for personal use?</h4>
+                    <h4 class="question">How long does it take to get a mortgage?</h4>
                     <span class="down-arrow"><i class="fas fa-chevron-down"></i></span>
                 </summary>
-                <p class="answer">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, impedit.</p>
+                <p class="answer">The timeline for getting a mortgage can vary depending on a number of factors, including the type of mortgage, your financial situation, and the current state of the housing market. In general, the process can take anywhere from 30 to 60 days, but our team will work to make the process as efficient and streamlined as possible.</p>
+            </details>
+            <hr>
+        </div>
+        <div class="faq">
+            <details>
+                <summary>
+                    <h4 class="question">Can I refinance my mortgage with Desh Capital LLC?</h4>
+                    <span class="down-arrow"><i class="fas fa-chevron-down"></i></span>
+                </summary>
+                <p class="answer">Yes, we offer refinancing options for homeowners who are looking to lower their monthly mortgage payments, shorten their loan term, or access their home equity. Our team can help you determine whether refinancing is the right choice for your financial goals and guide you through the process.</p>
+            </details>
+            <hr>
+        </div>
+        <div class="faq">
+            <details>
+                <summary>
+                    <h4 class="question">What if I have bad credit? Can I still get a mortgage?</h4>
+                    <span class="down-arrow"><i class="fas fa-chevron-down"></i></span>
+                </summary>
+                <p class="answer">While having a good credit score can help you qualify for more favorable mortgage terms, we understand that not everyone has perfect credit. Our team will work with you to assess your financial situation and explore mortgage options that may be available to you, including FHA loans and other government-backed programs.</p>
+            </details>
+            <hr>
+        </div>
+        <div class="faq">
+            <details>
+                <summary>
+                    <h4 class="question">How can I contact Desh Capital LLC for more information?</h4>
+                    <span class="down-arrow"><i class="fas fa-chevron-down"></i></span>
+                </summary>
+                <p class="answer">You can contact Desh Capital LLC by visiting our website and filling out a contact form, or by calling us directly at our listed phone number. Our team is happy to answer any questions you may have about our mortgage products and services.</p>
             </details>
             <hr>
         </div>
