--- a/faqsBangla.html
+++ b/faqsBangla.html
@@ -119,6 +119,16 @@
         <div class="faq">
             <details>
                 <summary>
+                    <h4 class="question">দেশ ক্যাপিটাল এলএলসি কি লাইসেন্সপ্রাপ্ত এবং বীমাকৃত?</h4>
+                    <span class="down-arrow"><i class="fas fa-chevron-down"></i></span>
+                </summary>
+                <p class="answer">হ্যাঁ, Desh Capital LLC আমরা মটগেজ পরিষেবা প্রদানের জন্য লাইসেন্সপ্রাপ্ত এবং বীমাকৃত। আমাদের দল সমস্ত প্রাসঙ্গিক আইন ও প্রবিধান মেনে চলার জন্য নিবেদিত।</p>
+            </details>
+            <hr>
+        </div>
+        <div class="faq">
+            <details>
+                <summary>
                     <h4 class="question">আমি একটি মটগেজ জন্য কত ধার করতে পারি?</h4>
                     <span class="down-arrow"><i class="fas fa-chevron-down"></i></span>
                 </summary>
@@ -129,10 +139,40 @@
         <div class="faq">
             <details>
                 <summary>
-                    <h4 class="question">Why is Raycast free for personal use?</h4>
+                    <h4 class="question">মটগেজ পেতে কতক্ষণ লাগে?</h4>
                     <span class="down-arrow"><i class="fas fa-chevron-down"></i></span>
                 </summary>
-                <p class="answer">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, impedit.</p>
+                <p class="answer">মটগেজ পাওয়ার সময়সীমা বিভিন্ন কারণের উপর নির্ভর করে পরিবর্তিত হতে পারে, যার মধ্যে মটগেজ এর ধরন, আপনার আর্থিক পরিস্থিতি এবং হাউজিং মার্কেটের বর্তমান অবস্থা রয়েছে। সাধারণভাবে, প্রক্রিয়াটি 30 থেকে 60 দিন পর্যন্ত সময় নিতে পারে, তবে আমাদের দল প্রক্রিয়াটিকে যতটা সম্ভব দক্ষ এবং সুবিন্যস্ত করার জন্য কাজ করবে।</p>
+            </details>
+            <hr>
+        </div>
+        <div class="faq">
+            <details>
+                <summary>
+                    <h4 class="question">আমি কি Desh Capital LLC এর সাথে আমার মটগেজ পুনঃঅর্থায়ন করতে পারি?</h4>
+                    <span class="down-arrow"><i class="fas fa-chevron-down"></i></span>
+                </summary>
+                <p class="answer">হ্যাঁ, আমরা সেই বাড়ির মালিকদের জন্য পুনঃঅর্থায়নের বিকল্প অফার করি যারা তাদের মাসিক মটগেজ পেমেন্ট কমাতে, তাদের ঋণের মেয়াদ কমাতে বা তাদের বাড়ির ইকুইটি অ্যাক্সেস করতে চাইছেন। আমাদের দল আপনাকে আপনার আর্থিক লক্ষ্যগুলির জন্য পুনঃঅর্থায়ন সঠিক পছন্দ কিনা তা নির্ধারণ করতে এবং প্রক্রিয়াটির মাধ্যমে আপনাকে গাইড করতে সহায়তা করতে পারে।</p>
+            </details>
+            <hr>
+        </div>
+        <div class="faq">
+            <details>
+                <summary>
+                    <h4 class="question">যদি আমার খারাপ ক্রেডিট থাকে? আমি কি এখনও একটি মটগেজ পেতে পারি?</h4>
+                    <span class="down-arrow"><i class="fas fa-chevron-down"></i></span>
+                </summary>
+                <p class="answer">যদিও একটি ভাল ক্রেডিট স্কোর আপনাকে আরও অনুকূল মটগেজ শর্তাবলীর জন্য যোগ্য হতে সাহায্য করতে পারে, আমরা বুঝি যে প্রত্যেকেরই নিখুঁত ক্রেডিট নেই। আমাদের দল আপনার আর্থিক পরিস্থিতি মূল্যায়ন করতে এবং FHA ঋণ এবং অন্যান্য সরকার-সমর্থিত প্রোগ্রাম সহ আপনার জন্য উপলব্ধ মটগেজ বিকল্পগুলি অন্বেষণ করতে আপনার সাথে কাজ করবে।</p>
+            </details>
+            <hr>
+        </div>
+        <div class="faq">
+            <details>
+                <summary>
+                    <h4 class="question">আরও তথ্যের জন্য আমি কিভাবে Desh Capital LLC এর সাথে যোগাযোগ করতে পারি?</h4>
+                    <span class="down-arrow"><i class="fas fa-chevron-down"></i></span>
+                </summary>
+                <p class="answer">আপনি আমাদের ওয়েবসাইট পরিদর্শন করে এবং একটি যোগাযোগ ফর্ম পূরণ করে, অথবা আমাদের তালিকাভুক্ত ফোন নম্বরে সরাসরি আমাদের কল করার মাধ্যমে দেশ ক্যাপিটাল এলএলসি এর সাথে যোগাযোগ করতে পারেন। আমাদের মটগেজ পণ্য এবং পরিষেবাগুলি সম্পর্কে আপনার যে কোনও প্রশ্নের উত্তর দিতে আমাদের দল খুশি ৷</p>
             </details>
             <hr>
         </div>
