--- a/aboutUs.html
+++ b/aboutUs.html
@@ -112,7 +112,7 @@
         <hr>
         <div class="team-box">
             <div class="team">
-                <img src="Assets/Images/Team/mrf.jpg" alt="Loading...">
+                <img class="aboutus-img" src="Assets/Images/Team/mrf.jpg" alt="Loading...">
                 <h3 class="name">Maruf Ahmed</h3>
                 <h5 class="des">Designation</h5>
                 <ul class="team-icon">
@@ -124,7 +124,7 @@
                 </ul>
             </div>
             <div class="team">
-                <img src="Assets/Images/Team/shadik.jpg" alt="Loading...">
+                <img class="aboutus-img" src="Assets/Images/Team/shadik.jpg" alt="Loading...">
                 <h3 class="name">Shadik Hasan</h3>
                 <h5 class="des">CIO</h5>
                 <ul class="team-icon">
