--- a/aboutUsBangla.html
+++ b/aboutUsBangla.html
@@ -112,7 +112,7 @@
         <hr>
         <div class="team-box">
             <div class="team">
-                <img src="Assets/Images/Team/mrf.jpg" alt="Loading...">
+                <img class="aboutus-img" src="Assets/Images/Team/mrf.jpg" alt="Loading...">
                 <h3 class="name">মারুফ আহমেদ</h3>
                 <h5 class="des">Designation</h5>
                 <ul class="team-icon">
@@ -123,10 +123,10 @@
                     </li>
                 </ul>
             </div>
-            <!-- <div class="team">
-                <img src="Assets/Images/Team/shadik.jpg" alt="Loading...">
+            <div class="team">
+                <img class="aboutus-img" src="Assets/Images/Team/shadik.jpg" alt="Loading...">
                 <h3 class="name">সাদিক হাসান</h3>
-                <h5 class="des">Designation</h5>
+                <h5 class="des">CIO</h5>
                 <ul class="team-icon">
                     <li><a href="https://www.linkedin.com/in/shadik-hasan-2ba56b1ab/" target="_blank"><i class="fab fa-linkedin"></i></a></li>
                     <li><a href="https://www.facebook.com/md.shadikhasansk/" target="_blank"><i
@@ -134,7 +134,7 @@
                     <li><a href="mailto:shadikhasan.cse@gmail.com" target="_blank"><i class="fas fa-envelope"></i></a>
                     </li>
                 </ul>
-            </div> -->
+            </div>
         </div>
     </section>
 
