--- a/index.html
+++ b/index.html
@@ -235,18 +235,14 @@
 
     <!-- Closest Services Section START -->
     <section class="closest-services">
-        <h1 class="closest-services-title">Seccessful Closest Service</h1>
+        <h1 class="closest-services-title">Seccessful Provide Services</h1>
         <div class="closest-service-box">
             <div class="closest-service">
-                <h1 class="numbers">273</h1>
-                <h3 class="closest-service-title">Loan Closed</h3>
-            </div>
-            <div class="closest-service">
-                <h1 class="numbers">4.5+/5</h1>
+                <h1 class="numbers">4.9+/5</h1>
                 <h3 class="closest-service-title">Ratings</h3>
             </div>
             <div class="closest-service">
-                <h1 class="numbers">10+</h1>
+                <h1 class="numbers">5+</h1>
                 <h3 class="closest-service-title">Years <br> Experience</h3>
             </div>
         </div>
@@ -258,19 +254,13 @@
         <h1 class="feedbacks-title">Feedbacks From Our Clients</h1>
         <div class="feedback-box">
             <div class="feedback">
-                <p class="feedback-text"><sup class="comma">"</sup>Lorem ipsum dolor, sit amet consectetur adipisicing
-                    elit. Rem repellat
-                    veritatis qui. Dignissimos, laborum eos voluptatibus molestiae similique architecto accusamus animi
-                    provident delectus minima exercitationem, repellat ipsam laudantium praesentium veniam.</p>
+                <p class="feedback-text"><sup class="comma">"</sup>From Desh capital I got best service</p>
                 <p class="feedback-by"><sup class="comma">"</sup>_Shadik</p>
             </div>
 
             <div class="feedback">
-                <p class="feedback-text"><sup class="comma">"</sup>Lorem ipsum dolor, sit amet consectetur adipisicing
-                    elit. Rem repellat
-                    veritatis qui. Dignissimos, laborum eos voluptatibus molestiae similique architecto accusamus animi
-                    provident delectus minima exercitationem, repellat ipsam laudantium praesentium veniam.</p>
-                <p class="feedback-by"><sup class="comma">"</sup>_Shadik</p>
+                <p class="feedback-text"><sup class="comma">"</sup>I take service from there. They are so wonderful. They solve my problem very easily. I like them so much. Desh Capital LLC is wonderful.</p>
+                <p class="feedback-by"><sup class="comma">"</sup>_Srabon</p>
             </div>
 
             <div class="feedback">
